// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section message examples Default error section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Default informational section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-icon v-icon-visa v-icon-low v-icon-information v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M15 19H9V17.0351H11.451V12.9874H9.43137V11.0225H13.4118V17.0351H15V19ZM12 9.53895C10.7549 9.53895 9.73529 8.51719 9.73529 7.26947C9.73529 6.02175 10.7549 5 12 5C13.2549 5 14.2647 6.02175 14.2647 7.26947C14.2647 8.51719 13.2549 9.53895 12 9.53895ZM12 6.96491C11.8333 6.96491 11.6961 7.10246 11.6961 7.26947C11.6961 7.43649 11.8333 7.57403 12 7.57403C12.1667 7.57403 12.3039 7.43649 12.3039 7.26947C12.3039 7.10246 12.1667 6.96491 12 6.96491Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Default subtle section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-idea v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M16 22H8V24H16V22Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C6.37 0 3 4.58 3 9C3 12.66 5.22 14.21 6.55 15.14C6.85 15.35 7.14 15.55 7.29 15.7C7.67 16.08 8 18.09 8 20L9 21H15L16 20C16 17.59 16.23 16.18 16.71 15.71C16.86 15.56 17.15 15.36 17.45 15.15C18.78 14.21 21 12.66 21 9C21 4.58 17.63 0 12 0ZM16.3 13.5C15.92 13.76 15.57 14.01 15.29 14.29C14.46 15.12 14.08 16.47 14.01 19H13V11H15V9H9V11H11V19H9.98C9.91 17.53 9.65 15.23 8.71 14.29C8.43 14.01 8.08 13.76 7.7 13.5C6.5 12.66 5 11.62 5 9C5 5.61 7.45 2 12 2C16.55 2 19 5.61 19 9C19 11.62 17.5 12.66 16.3 13.5Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Default success section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M10.5726 14.2094L8.36276 11.9469L7 13.3422L10.5726 17L18 9.39529L16.6372 8L10.5726 14.2094Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C5.38317 0 0 5.38317 0 12C0 18.6168 5.38317 24 12 24C18.6168 24 24 18.6168 24 12C24 5.38317 18.6168 0 12 0ZM12 21.8182C6.58647 21.8182 2.18182 17.4141 2.18182 12C2.18182 6.58647 6.58647 2.18182 12 2.18182C17.4141 2.18182 21.8182 6.58647 21.8182 12C21.8182 17.4141 17.4141 21.8182 12 21.8182Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Default warning section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-icon v-icon-visa v-icon-low v-icon-warning v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.5 8H13.5V15H11.5V8ZM11.5 17H13.5V19H11.5V17Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Empty error section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  />
</div>
`;

exports[`Section message examples Empty informational section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  />
</div>
`;

exports[`Section message examples Empty subtle section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  />
</div>
`;

exports[`Section message examples Empty success section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  />
</div>
`;

exports[`Section message examples Empty warning section message should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  />
</div>
`;

exports[`Section message examples Error section message with button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <button
        class="v-button v-button-secondary"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Error section message with link should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <a
        class="v-link"
        href="./section-message"
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Error section message with title should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <h4
        class="v-typography-body-2-bold"
      >
        Error title
      </h4>
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Error section message without close icon button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-error v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Error"
      class="v-icon v-icon-visa v-icon-low v-icon-error v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11 6V14H13V6H11ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
        fill-rule="evenodd"
      />
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Section message examples Informational section message with button should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-icon v-icon-visa v-icon-low v-icon-information v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M15 19H9V17.0351H11.451V12.9874H9.43137V11.0225H13.4118V17.0351H15V19ZM12 9.53895C10.7549 9.53895 9.73529 8.51719 9.73529 7.26947C9.73529 6.02175 10.7549 5 12 5C13.2549 5 14.2647 6.02175 14.2647 7.26947C14.2647 8.51719 13.2549 9.53895 12 9.53895ZM12 6.96491C11.8333 6.96491 11.6961 7.10246 11.6961 7.26947C11.6961 7.43649 11.8333 7.57403 12 7.57403C12.1667 7.57403 12.3039 7.43649 12.3039 7.26947C12.3039 7.10246 12.1667 6.96491 12 6.96491Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <button
        class="v-button v-button-secondary"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Informational section message with link should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-icon v-icon-visa v-icon-low v-icon-information v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M15 19H9V17.0351H11.451V12.9874H9.43137V11.0225H13.4118V17.0351H15V19ZM12 9.53895C10.7549 9.53895 9.73529 8.51719 9.73529 7.26947C9.73529 6.02175 10.7549 5 12 5C13.2549 5 14.2647 6.02175 14.2647 7.26947C14.2647 8.51719 13.2549 9.53895 12 9.53895ZM12 6.96491C11.8333 6.96491 11.6961 7.10246 11.6961 7.26947C11.6961 7.43649 11.8333 7.57403 12 7.57403C12.1667 7.57403 12.3039 7.43649 12.3039 7.26947C12.3039 7.10246 12.1667 6.96491 12 6.96491Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <a
        class="v-link"
        href="./section-message"
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Informational section message with title should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-icon v-icon-visa v-icon-low v-icon-information v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M15 19H9V17.0351H11.451V12.9874H9.43137V11.0225H13.4118V17.0351H15V19ZM12 9.53895C10.7549 9.53895 9.73529 8.51719 9.73529 7.26947C9.73529 6.02175 10.7549 5 12 5C13.2549 5 14.2647 6.02175 14.2647 7.26947C14.2647 8.51719 13.2549 9.53895 12 9.53895ZM12 6.96491C11.8333 6.96491 11.6961 7.10246 11.6961 7.26947C11.6961 7.43649 11.8333 7.57403 12 7.57403C12.1667 7.57403 12.3039 7.43649 12.3039 7.26947C12.3039 7.10246 12.1667 6.96491 12 6.96491Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <h4
        class="v-typography-body-2-bold"
      >
        Informational title
      </h4>
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Informational section message without close icon button should render correctly 1`] = `
<div>
  <div
    class="v-message v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Information"
      class="v-icon v-icon-visa v-icon-low v-icon-information v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M12 24C5.38 24 0 18.62 0 12C0 5.38 5.38 0 12 0C18.62 0 24 5.38 24 12C24 18.62 18.62 24 12 24ZM12 2C6.49 2 2 6.49 2 12C2 17.51 6.49 22 12 22C17.51 22 22 17.51 22 12C22 6.49 17.51 2 12 2Z"
      />
      <path
        class="v-icon-primary"
        d="M15 19H9V17.0351H11.451V12.9874H9.43137V11.0225H13.4118V17.0351H15V19ZM12 9.53895C10.7549 9.53895 9.73529 8.51719 9.73529 7.26947C9.73529 6.02175 10.7549 5 12 5C13.2549 5 14.2647 6.02175 14.2647 7.26947C14.2647 8.51719 13.2549 9.53895 12 9.53895ZM12 6.96491C11.8333 6.96491 11.6961 7.10246 11.6961 7.26947C11.6961 7.43649 11.8333 7.57403 12 7.57403C12.1667 7.57403 12.3039 7.43649 12.3039 7.26947C12.3039 7.10246 12.1667 6.96491 12 6.96491Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Section message examples Subtle section message with button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-idea v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M16 22H8V24H16V22Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C6.37 0 3 4.58 3 9C3 12.66 5.22 14.21 6.55 15.14C6.85 15.35 7.14 15.55 7.29 15.7C7.67 16.08 8 18.09 8 20L9 21H15L16 20C16 17.59 16.23 16.18 16.71 15.71C16.86 15.56 17.15 15.36 17.45 15.15C18.78 14.21 21 12.66 21 9C21 4.58 17.63 0 12 0ZM16.3 13.5C15.92 13.76 15.57 14.01 15.29 14.29C14.46 15.12 14.08 16.47 14.01 19H13V11H15V9H9V11H11V19H9.98C9.91 17.53 9.65 15.23 8.71 14.29C8.43 14.01 8.08 13.76 7.7 13.5C6.5 12.66 5 11.62 5 9C5 5.61 7.45 2 12 2C16.55 2 19 5.61 19 9C19 11.62 17.5 12.66 16.3 13.5Z"
      />
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <button
        class="v-button v-button-secondary"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Subtle section message with link should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-idea v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M16 22H8V24H16V22Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C6.37 0 3 4.58 3 9C3 12.66 5.22 14.21 6.55 15.14C6.85 15.35 7.14 15.55 7.29 15.7C7.67 16.08 8 18.09 8 20L9 21H15L16 20C16 17.59 16.23 16.18 16.71 15.71C16.86 15.56 17.15 15.36 17.45 15.15C18.78 14.21 21 12.66 21 9C21 4.58 17.63 0 12 0ZM16.3 13.5C15.92 13.76 15.57 14.01 15.29 14.29C14.46 15.12 14.08 16.47 14.01 19H13V11H15V9H9V11H11V19H9.98C9.91 17.53 9.65 15.23 8.71 14.29C8.43 14.01 8.08 13.76 7.7 13.5C6.5 12.66 5 11.62 5 9C5 5.61 7.45 2 12 2C16.55 2 19 5.61 19 9C19 11.62 17.5 12.66 16.3 13.5Z"
      />
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <a
        class="v-link"
        href="./section-message"
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Subtle section message with title should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-idea v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M16 22H8V24H16V22Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C6.37 0 3 4.58 3 9C3 12.66 5.22 14.21 6.55 15.14C6.85 15.35 7.14 15.55 7.29 15.7C7.67 16.08 8 18.09 8 20L9 21H15L16 20C16 17.59 16.23 16.18 16.71 15.71C16.86 15.56 17.15 15.36 17.45 15.15C18.78 14.21 21 12.66 21 9C21 4.58 17.63 0 12 0ZM16.3 13.5C15.92 13.76 15.57 14.01 15.29 14.29C14.46 15.12 14.08 16.47 14.01 19H13V11H15V9H9V11H11V19H9.98C9.91 17.53 9.65 15.23 8.71 14.29C8.43 14.01 8.08 13.76 7.7 13.5C6.5 12.66 5 11.62 5 9C5 5.61 7.45 2 12 2C16.55 2 19 5.61 19 9C19 11.62 17.5 12.66 16.3 13.5Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <h4
        class="v-typography-body-2-bold"
      >
        Error title
      </h4>
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Subtle section message without close icon button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-subtle v-section"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-visa v-icon-low v-icon-idea v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M16 22H8V24H16V22Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C6.37 0 3 4.58 3 9C3 12.66 5.22 14.21 6.55 15.14C6.85 15.35 7.14 15.55 7.29 15.7C7.67 16.08 8 18.09 8 20L9 21H15L16 20C16 17.59 16.23 16.18 16.71 15.71C16.86 15.56 17.15 15.36 17.45 15.15C18.78 14.21 21 12.66 21 9C21 4.58 17.63 0 12 0ZM16.3 13.5C15.92 13.76 15.57 14.01 15.29 14.29C14.46 15.12 14.08 16.47 14.01 19H13V11H15V9H9V11H11V19H9.98C9.91 17.53 9.65 15.23 8.71 14.29C8.43 14.01 8.08 13.76 7.7 13.5C6.5 12.66 5 11.62 5 9C5 5.61 7.45 2 12 2C16.55 2 19 5.61 19 9C19 11.62 17.5 12.66 16.3 13.5Z"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Section message examples Success section message with button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M10.5726 14.2094L8.36276 11.9469L7 13.3422L10.5726 17L18 9.39529L16.6372 8L10.5726 14.2094Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C5.38317 0 0 5.38317 0 12C0 18.6168 5.38317 24 12 24C18.6168 24 24 18.6168 24 12C24 5.38317 18.6168 0 12 0ZM12 21.8182C6.58647 21.8182 2.18182 17.4141 2.18182 12C2.18182 6.58647 6.58647 2.18182 12 2.18182C17.4141 2.18182 21.8182 6.58647 21.8182 12C21.8182 17.4141 17.4141 21.8182 12 21.8182Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <button
        class="v-button v-button-secondary"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Success section message with link should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M10.5726 14.2094L8.36276 11.9469L7 13.3422L10.5726 17L18 9.39529L16.6372 8L10.5726 14.2094Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C5.38317 0 0 5.38317 0 12C0 18.6168 5.38317 24 12 24C18.6168 24 24 18.6168 24 12C24 5.38317 18.6168 0 12 0ZM12 21.8182C6.58647 21.8182 2.18182 17.4141 2.18182 12C2.18182 6.58647 6.58647 2.18182 12 2.18182C17.4141 2.18182 21.8182 6.58647 21.8182 12C21.8182 17.4141 17.4141 21.8182 12 21.8182Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <a
        class="v-link"
        href="./section-message"
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Success section message with title should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M10.5726 14.2094L8.36276 11.9469L7 13.3422L10.5726 17L18 9.39529L16.6372 8L10.5726 14.2094Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C5.38317 0 0 5.38317 0 12C0 18.6168 5.38317 24 12 24C18.6168 24 24 18.6168 24 12C24 5.38317 18.6168 0 12 0ZM12 21.8182C6.58647 21.8182 2.18182 17.4141 2.18182 12C2.18182 6.58647 6.58647 2.18182 12 2.18182C17.4141 2.18182 21.8182 6.58647 21.8182 12C21.8182 17.4141 17.4141 21.8182 12 21.8182Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <h4
        class="v-typography-body-2-bold"
      >
        Success title
      </h4>
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Success section message without close icon button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-success v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Success"
      class="v-icon v-icon-visa v-icon-low v-icon-success v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M10.5726 14.2094L8.36276 11.9469L7 13.3422L10.5726 17L18 9.39529L16.6372 8L10.5726 14.2094Z"
      />
      <path
        class="v-icon-primary"
        d="M12 0C5.38317 0 0 5.38317 0 12C0 18.6168 5.38317 24 12 24C18.6168 24 24 18.6168 24 12C24 5.38317 18.6168 0 12 0ZM12 21.8182C6.58647 21.8182 2.18182 17.4141 2.18182 12C2.18182 6.58647 6.58647 2.18182 12 2.18182C17.4141 2.18182 21.8182 6.58647 21.8182 12C21.8182 17.4141 17.4141 21.8182 12 21.8182Z"
      />
      <defs>
        <clippath>
          <rect
            height="24"
            width="24"
          />
        </clippath>
      </defs>
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
  </div>
</div>
`;

exports[`Section message examples Warning section message with button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-icon v-icon-visa v-icon-low v-icon-warning v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.5 8H13.5V15H11.5V8ZM11.5 17H13.5V19H11.5V17Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <button
        class="v-button v-button-secondary"
      >
        Primary action
      </button>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Warning section message with link should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-icon v-icon-visa v-icon-low v-icon-warning v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.5 8H13.5V15H11.5V8ZM11.5 17H13.5V19H11.5V17Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="v-message-content"
    >
      <p
        class="v-mb-8"
      >
        This is required text that describes the section message in more detail.
      </p>
      <a
        class="v-link"
        href="./section-message"
      >
        Destination label
      </a>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Warning section message with title should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-icon v-icon-visa v-icon-low v-icon-warning v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.5 8H13.5V15H11.5V8ZM11.5 17H13.5V19H11.5V17Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <h4
        class="v-typography-body-2-bold"
      >
        Warning title
      </h4>
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
    <button
      aria-label="Close"
      class="v-button v-button-small v-button-tertiary v-button-icon v-button-subtle -v-mt-8 -v-mr-8 v-ml-14 v-p-7"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-visa v-icon-tiny v-icon-close"
        focusable="false"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="v-icon-primary"
          d="M8.00001 9.4149L13.9498 15.3646L15.364 13.9504L9.41423 8.00069L15.364 2.05094L13.9498 0.636723L8.00001 6.58647L2.05026 0.636719L0.636047 2.05093L6.5858 8.00069L0.636054 13.9504L2.05027 15.3646L8.00001 9.4149Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              transform="translate(0 0.000488281)"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Section message examples Warning section message without close icon button should render correctly 1`] = `
<div>
  <div
    class="v-message v-message-warning v-section"
  >
    <svg
      aria-hidden="false"
      aria-label="Warning"
      class="v-icon v-icon-visa v-icon-low v-icon-warning v-message-icon"
      focusable="false"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="v-icon-secondary"
        d="M24 23H0V20.64L11.41 0H13.72L24 20.66V23ZM2.08 21H21.93L12.53 2.1L2.08 21Z"
      />
      <path
        class="v-icon-primary"
        clip-rule="evenodd"
        d="M11.5 8H13.5V15H11.5V8ZM11.5 17H13.5V19H11.5V17Z"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="v-message-content v-pb-2 v-pl-2"
    >
      <p>
        This is required text that describes the section message in more detail.
      </p>
    </div>
  </div>
</div>
`;
